--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -74,7 +74,13 @@
         <label><input type="checkbox" name="personality"> Crazy</label>
       </div>
     </div>
-    <label for="cat-photo-url"><input class="form-control" type="text" placeholder="cat photo URL" name="cat-photo-url" id="cat-photo-url" required />
-    <button class="btn btn-primary" type="submit">Submit <i class="fas fa-paper-plane"></i></button>
+    <div class="row">
+      <div class="col-xs-7">
+        <input class="form-control" type="text" placeholder="cat photo URL" required />
+      </div>
+      <div class="col-xs-5">
+        <button class="btn btn-primary" type="submit">Submit <i class="fas fa-paper-plane"></i></button>
+      </div>
+    </div>
   </form>
 </div>
