--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -6,9 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-  <title>Bootstrap Practice</title>
+  <title>jQuery Practice</title>
 </head>
 <body>
+  <script>
+    $(document).ready(function () {
+
+    });
+  </script>
+
   <!-- Code below this line should not be changed -->
   <div class="container-fluid">
     <h3 class="text-primary text-center">jQuery Playground</h3>
