Added classes to same element in different ways using jQuery

--- a/Bootstrap/jQuery/index.html
+++ b/Bootstrap/jQuery/index.html
@@ -14,9 +14,12 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     $(document).ready(function() {
-      $("button").addClass("animate__animated animate__bounce");
-      $(".well").addClass("animate__animated animate__shakeX");
-      $("#target3").addClass("animate__animated animate__fadeOut")
+      // $("button").addClass("animate__animated animate__bounce");
+      // $(".well").addClass("animate__animated animate__shakeX");
+      // $("#target3").addClass("animate__animated animate__fadeOut")
+      $("button").addClass("animate__animated")
+      $(".btn").addClass("animate__shakeX")
+      $("#target1").addClass("btn-primary")
     });
   </script>
 
