Removed btn default class from all buttons using jQuery

--- a/Bootstrap/jQuery/index.html
+++ b/Bootstrap/jQuery/index.html
@@ -20,6 +20,7 @@
       $("button").addClass("animate__animated")
       $(".btn").addClass("animate__shakeX")
       $("#target1").addClass("btn-primary")
+      $("button").removeClass("btn-default")
     });
   </script>
 
