--- a/Bootstrap/jQuery/index.html
+++ b/Bootstrap/jQuery/index.html
@@ -21,6 +21,7 @@
       $(".btn").addClass("animate__shakeX")
       $("#target1").addClass("btn-primary")
       $("button").removeClass("btn-default")
+      $("#target1").css("color", "red")
     });
   </script>
 
