Using jquery prop function, disable the target 1 button

--- a/Bootstrap/jQuery/index.html
+++ b/Bootstrap/jQuery/index.html
@@ -22,6 +22,7 @@
       $("#target1").addClass("btn-primary")
       $("button").removeClass("btn-default")
       $("#target1").css("color", "red")
+      $("#target1").prop("disabled", true)
     });
   </script>
 
