--- a/Bootstrap/jQuery/index.html
+++ b/Bootstrap/jQuery/index.html
@@ -23,6 +23,7 @@
       $("button").removeClass("btn-default")
       $("#target1").css("color", "red")
       $("#target1").prop("disabled", true)
+      $("#target4").html("<em>#target4</em>")
     });
   </script>
 
